[gd_scene load_steps=13 format=3 uid="uid://cf4efkkrn5w1p"]

[ext_resource type="Script" path="res://Enemies/wizard.gd" id="1_3u33q"]
[ext_resource type="Texture2D" uid="uid://bpllpmlmnyfq1" path="res://wizard/run.png" id="1_ewshu"]
[ext_resource type="Texture2D" uid="uid://6tt54ns14w8n" path="res://wizard/attack.png" id="2_2knlf"]
[ext_resource type="Texture2D" uid="uid://txrdiabnhmni" path="res://wizard/die.png" id="3_wsr55"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_756np"]
radius = 17.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bpr58"]
radius = 295.677

[sub_resource type="Animation" id="Animation_6reks"]
resource_name = "run"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_m5prv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("die:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_pxygk"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shooting"
}]
}

[sub_resource type="Animation" id="Animation_33yog"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("die:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_8iqt3"]
resource_name = "spawn"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("die:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ltjhu"]
_data = {
"RESET": SubResource("Animation_m5prv"),
"attack": SubResource("Animation_pxygk"),
"death": SubResource("Animation_33yog"),
"run": SubResource("Animation_6reks"),
"spawn": SubResource("Animation_8iqt3")
}

[node name="Wizard" type="CharacterBody2D"]
scale = Vector2(-1, 1)
collision_layer = 32
collision_mask = 47
script = ExtResource("1_3u33q")

[node name="run" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_ewshu")
hframes = 2
vframes = 3
frame = 1

[node name="attack" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_2knlf")
hframes = 3
vframes = 4
frame = 1

[node name="die" type="Sprite2D" parent="."]
texture = ExtResource("3_wsr55")
hframes = 3
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_756np")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_bpr58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ltjhu")
}

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-13, 4)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.55

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
